# ceODBC

./: .gitignore  .hgignore  .pylintrc  ApiTypes.c  BinaryVar.c  BitVar.c  Connection.c  Cursor.c  DateTimeVar.c  Environment.c  Error.c  HISTORY.txt  LICENSE.txt  MANIFEST  MANIFEST.in  NumberVar.c  PKG-INFO  README.md  README.txt  StringUtils.c  StringVar.c  TimestampVar.c  UnicodeVar.c  Variable.c  ceODBC.c  index.html  pyproject.toml  release.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml  release.yml
doc/: Makefile  build.sh  ceODBC.tex  conf.py  connection.rst  cursor.rst  index.rst  license.rst  license.tex  releasenotes.rst  variable.rst
doc/src/: conf.py  connection.rst  cursor.rst  index.rst  license.rst  module.rst  releasenotes.rst  variable.rst
html/: about.html  ceODBC.html  connection.html  connobj.html  constants.html  contents.html  cursor.html  cursorobj.html  exceptions.html  front.html  genindex.html  index.html  license.html  modindex.html  module.html  objects.inv  py-modindex.html  search.html  searchindex.js  searchindex.json  variable.html  varobj.html  vartypes.html
src/: ApiTypes.c  BinaryVar.c  BitVar.c  Connection.c  Cursor.c  DateTimeVar.c  Environment.c  Error.c  NumberVar.c  StringUtils.c  UnicodeVar.c  Variable.c  _build_exts.py  ceODBC.c  ceoApiTypes.c  ceoBinaryVar.c  ceoBitVar.c  ceoConnection.c  ceoCursor.c  ceoDateTimeVar.c  ceoDbType.c  ceoEnv.c  ceoEnvironment.c  ceoError.c  ceoModule.c  ceoModule.h  ceoTransform.c  ceoUtils.c  ceoVar.c
src/ceODBC/: __init__.py  connection.pyx  constants.py  constructors.py  cursor.pyx  driver.pyx  errors.pyx  exceptions.py  odbc.pxd  string_buffer.pyx  types.pyx  utils.pyx  var.pyx  version.py
test/mysql/: Cursor.py  NumberVar.py  SetupTest.sql  StringVar.py  TestEnv.py  test.py  test3k.py
test/pgsql/: Connection.py  Cursor.py  NumberVar.py  SetupTest.sql  StringVar.py  TestEnv.py  test.py  test3k.py
test/sqlserver/: Cursor.py  DateTimeVar.py  NumberVar.py  SetupTest.sql  TestEnv.py  UnicodeParameters.py  test.py  test3k.py
tests/: base.py  test_1000_types.py  test_1100_connection.py  test_1200_cursor.py  test_1300_numbers.py  test_1400_strings.py  test_1500_module.py  test_1600_dates.py  test_1700_catalog.py  test_connection.py  test_cursor.py  test_dbtypes.py  test_env.py
tests/mysql/: SetupTest.sql
tests/pgsql/: SetupTest.sql
