[build-system]
requires = ["setuptools >= 61", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311", "py312"]
required-version = 24

[tool.ruff]
line-length = 79
target-version = "py38"

[project]
name = "ceODBC"
description = "Python interface to ODBC"
readme = "README.md"
license = {text = "BSD License"}
authors = [{name = "Anthony Tuininga", email = "anthony.tuininga@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Topic :: Database"
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
Homepage = "https://anthony-tuininga.github.io/ceODBC"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.cmdclass]
build = "_build_exts.build"

[tool.setuptools.dynamic]
version = {attr = "ceODBC.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["src/_build_exts.py"]

[tool.cibuildwheel]
build-verbosity = "1"

[tool.cibuildwheel.linux]
build = "cp3*-manylinux_*"
archs = "x86_64 aarch64"
before-all = "yum -y install unixODBC-devel"

[tool.cibuildwheel.windows]
build = "cp3*"
