[metadata]
name = ceODBC
version = attr: ceODBC.version.__version__
description = Python interface to ODBC
license = BSD License
long_description = file: README.md
long_description_content_type = text/markdown
author = Anthony Tuininga
author_email = anthony.tuininga@gmail.com
url = https://anthony-tuininga.github.io/ceODBC
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Topic :: Database

[options]
zip_safe = false
python_requires = >=3.6
setup_requires = cython
test_suite = tests
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
